# aster

./: .project  AUTHORS  README
aster/: .project  AUTHORS  MOVED  Makefile  Makefile.am  README  aster.spec.in  bootstrap  configure.ac
aster/editor/: Makefile  Stratego-Attributes-Colorer.esv  Stratego-Attributes-Folding.esv  Stratego-Attributes-Outliner.esv  Stratego-Attributes.esv
aster/editor/src/: Stratego-Attributes-Colorer.esv  Stratego-Attributes-Folding.esv  Stratego-Attributes.esv
aster/runtime/: Makefile.am  annotations.str  aster-runtime.str  astr-runtime.str  attributes.str  circular.str  debug.str  hashtables.str  lists.str  parents.str  rewrites.str
aster/runtime/aster/attributes/: collection.astr  common.astr  debug.astr  lang.astr  reflection.astr  tree-access.astr
aster/runtime/aster/decorators/: assert.astr  caching.astr  circular.astr  collection.astr  common.astr  debug.astr  flow.astr  lang.astr  lookup.astr  rewriting.astr  types.astr
aster/runtime/aster/lang/: annotations.str  attributes.str  debug.str  hashtables.str  lists.str  parents.str  rewrites.str
aster/runtime/aster/runtime/: annotations.str  attributes.str  circular.str  debug.str  hashtables.str  lists.str  parents.str  rewrites.str
aster/runtime/astr/runtime/: annotations.str  attributes.str  circular.str  debug.str  lists.str  parents.str  rewrites.str
aster/syntax/: Makefile.am  ResultTerms.sdf  Stratego-Attributes-in-Stratego.sdf  Stratego-Attributes.sdf  Stratego-With-Hack.sdf
aster/tests/: Makefile  Makefile.am  Stratego-Attributes.testsuite  anonymous-rules.astr  anonymous-rules.str  bagof.astr  binary-numbers.astr  caching.astr  caching2.astr  circular-basic-decorators.astr  circular-basic.astr  circular-liveness-rewrites.astr  circular-liveness.astr  circular-propconst.astr  cons-nil.astr  decorator-duplication.astr  decorators.astr  empty.astr  find-minimum.astr  lookup-unordered.astr  repmin-anonymous.astr  repmin-hag-decorated.astr  repmin-hag.astr  repmin-no-copy-rules.astr  repmin.astr  signature-evaluation.astr  test-aster-internals.astr  test-aster.str  test-attributes.astr  test-stratego-rerag.str  tests.str
aster/tests/fail/: bad-signature-use-2.astr  bad-signature-use-3.astr  context-free.astr  inline-marker-decorator.astr
aster/trans/: Makefile.am  analyze.str  assimilate.str  aster.str  check.astr  check.placeholder.str  debug.str  default-attributes.str  default-rules.str  desugar.str  io.str  options.str  rule-caching.str  rule-circularity.str  rule-defaults.str  rule-merging.str  rule-tracing.str  stratego-rerag.str  tracing.str  util.str
aster/trans/back/: anonymous-rewrites.str  assimilate.str  attribute-builtins.str  attribute-caching.str  attribute-references.str  attribute-tracing.str  decorator-definitions.str  decorator-references.str  decorator-wrapping.str  default-attributes.str  equation-definitions.str  equation-merging.str  equation-postprocess.str  native-attributes.str  rule-caching.str  rule-circularity.str  rule-decorators.str  rule-defaults.str  rule-definitions.str  rule-merging.str  rule-naming.str  rule-tracing.str  util.str
aster/trans/front/: analyze-foreign-ops.str  analyze.str  check.astr  decorator-ordering.str  desugar.str  include-library.str
aster/trans/lib/: multi-options.str
editor/src/: Stratego-Attributes-Colorer.esv  Stratego-Attributes-Folding.esv  Stratego-Attributes-Outliner.esv
org.strategoxt.imp.editors.aster/: .gitignore  .project  build.generated.xml  build.main.xml  plugin.xml  pom.xml
org.strategoxt.imp.editors.aster/.externalToolBuilders/: Stratego-Attributes build.main.xml.launch
org.strategoxt.imp.editors.aster/editor/: Stratego-Attributes-Builders.esv  Stratego-Attributes-Colorer.esv  Stratego-Attributes-Completions.esv  Stratego-Attributes-Folding.esv  Stratego-Attributes-Menus.esv  Stratego-Attributes-Outliner.esv  Stratego-Attributes-Outliner.str  Stratego-Attributes-Refactorings.esv  Stratego-Attributes-References.esv  Stratego-Attributes-Syntax.esv  Stratego-Attributes-Views.esv  Stratego-Attributes.main.esv
org.strategoxt.imp.editors.aster/editor/java/org/strategoxt/imp/editors/aster/: Activator.java  StrategoAttributesParseController.java  StrategoAttributesParseControllerGenerated.java  StrategoAttributesValidator.java
org.strategoxt.imp.editors.aster/lib/: editor-common.generated.str
org.strategoxt.imp.editors.aster/syntax/: Stratego-Attributes.def
org.strategoxt.imp.editors.aster/test/: example.astr
org.strategoxt.imp.editors.aster/trans/: check.str  generate.str  stratego_attributes.str
runtime/: aster-runtime.str
runtime/aster/attributes/: collection.astr  common.astr
runtime/aster/decorators/: assert.astr  circular.astr  debug.astr  flow.astr  lookup.astr  rewriting.astr  types.astr
runtime/aster/lang/: annotations.str  attributes.str  debug.str  lists.str
syntax/: Makefile.am  Stratego-Attributes.sdf
tests/: Stratego-Attributes.testsuite  anonymous-rules.astr  binary-numbers.astr  caching.astr  circular-basic.astr  circular-liveness.astr  cons-nil.astr  contributes-to.astr  decorators.astr  find-minimum.astr  nested-decorator.astr  repmin-hag-decorated.astr  repmin-hag.astr  repmin-no-copy-rules.astr  repmin.astr
tests/fail/: bad-decorator-duplication.astr  bad-decorator-ordering.astr  bad-signature-use-1.astr  native-attribute-redefinition.astr  undeclared.astr
trans/: Makefile.am  io.str
trans/back/: assimilate.str  attribute-builtins.str  attribute-caching.str  decorator-wrapping.str
trans/front/: analyze-foreign-ops.str  analyze.str  check.bootstrap.str  decorator-ordering.str  desugar.str
trans/lib/: xtc-multi-options.str
